# torchlite

./: .gitignore  ChangeLog.md  README.md  doc.md  simpleNeural.cabal  stack.yaml
analysis/: grokking.csv
analysis/debug2/: grokking.csv
analysis/debug3/: grokking.csv
analysis/debug5/: grokking.csv
analysis/debug6/: grokking.csv
analysis/grok_big/: grokking.csv
analysis/grok_big_1m/: grokking.csv
analysis/grok_debug/: grokking.csv
analysis/grok_mod100/: grokking.csv
analysis/grok_mod100_bigbatch/: grokking.csv
analysis/grok_mod100_bigbatch_fix2/: grokking.csv
analysis/grok_rocm_smoke/: grokking.csv
analysis/grok_time_mb/: grokking.csv
analysis/grok_time_mb2/: grokking.csv
archive/analysis/debug1/: grokking.csv
archive/analysis/debug4/: grokking.csv
archive/analysis/debug_cpu_small/: grokking.csv
archive/analysis/grok_big_1m/: grokking.csv
archive/analysis/grok_fast_sanity/: grokking.csv
archive/analysis/grok_mod100_bigbatch_fix/: grokking.csv
archive/analysis/grok_mod100_fast/: grokking.csv
archive/analysis/grok_mod100_run/: grokking.csv
archive/analysis/grok_p113_paperish/: grokking.csv
archive/analysis/grok_time/: grokking.csv
archive/analysis/grok_time_batch/: grokking.csv
archive/analysis/run_mod5/: grokking.csv
archive/analysis_partial/grok_big_1m/: grokking.csv
archive/src/: Main.hs  NNetRocm.hs
archive/test/Accuracy/: MainTest.hs
cbits/: build_rocm_backend.sh  rocblas_wrapper.c  rocm_backend.cpp
src/: NNet.hs
src_commented/: Main.hs  NNet.hs  NNetRocm.hs
torchlite/: torchlite.cabal
torchlite/app/: Grokking.hs  Main.hs
torchlite/scripts/: plot_svg.py
torchlite/src/TorchLite/: Backend.hs  Grokking.hs  NN.hs  Optim.hs  Runtime.hs  Tensor.hs
torchlite/src/TorchLite/Backend/: CPU.hs  ROCm.hs
torchlite/src/TorchLite/Optim/: ROCm.hs
