name:                torchlite
version:             0.1.0.0
license:             BSD3
author:              simpleNeural contributors
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TorchLite.Tensor
                     , TorchLite.Backend
                     , TorchLite.Backend.CPU
                     , TorchLite.Backend.ROCm
                     , TorchLite.Grokking
                     , TorchLite.NN
                     , TorchLite.Optim
                     , TorchLite.Optim.ROCm
                     , TorchLite.Runtime
  c-sources:           ../cbits/rocblas_wrapper.c
  include-dirs:        /opt/rocm/include
  extra-lib-dirs:      /opt/rocm/lib
                     , /home/marcel/Work/simple-neural/torchlite/cbits/rocm_build
  extra-libraries:     rocblas amdhip64 torchlite_rocm
  cc-options:          -std=c11 -D__HIP_PLATFORM_AMD__
  build-depends:       base >=4.9 && <4.11
                     , containers
                     , directory
                     , filepath
                     , hmatrix
                     , random
                     , vector
  default-language:    Haskell2010

executable torchlite-demo
  main-is:             Main.hs
  hs-source-dirs:      app
  build-depends:       base >=4.9 && <4.11
                     , hmatrix
                     , random
                     , torchlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable torchlite-grok
  main-is:             Grokking.hs
  hs-source-dirs:      app
  build-depends:       base >=4.9 && <4.11
                     , directory
                     , filepath
                     , hmatrix
                     , random
                     , torchlite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
